messing with validations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,8 @@
 
 en:
   hello: "Hello world"
+  props:
+    errors:
+      selfpropsing: "You can't give a prop to yourself... It's not how the world works:)"
+      user_limit: "Sorry, you can't add so many users"
+      no_users: 'ooo... not even a single receiver here? Cmon!'
